--- a/projects/09/Snake/Grid.vm
+++ b/projects/09/Snake/Grid.vm
@@ -6,6 +6,9 @@ push pointer 0
 call Grid.drawGrid 1
 pop temp 0
 push pointer 0
+call Grid.drawSnake 1
+pop temp 0
+push pointer 0
 return
 function Grid.dispose 0
 push argument 0
@@ -19,23 +22,25 @@ function Grid.drawGrid 0
 push argument 0
 pop pointer 0
 push pointer 0
-push constant 128
+push constant 1
 neg
 push constant 8
 call Grid.drawVertical 3
 pop temp 0
 push pointer 0
-push constant 127
+push constant 1
+neg
 push constant 31
 call Grid.drawVertical 3
 pop temp 0
 push pointer 0
 push constant 1
 neg
-push constant 8
+push constant 0
 push constant 9
 push constant 21
-call Grid.drawHorizontal 5
+push constant 16
+call Grid.drawHorizontal 6
 pop temp 0
 push pointer 0
 push constant 1
@@ -43,7 +48,8 @@ neg
 push constant 239
 push constant 9
 push constant 21
-call Grid.drawHorizontal 5
+push constant 16
+call Grid.drawHorizontal 6
 pop temp 0
 push constant 0
 return
@@ -56,7 +62,8 @@ neg
 push constant 112
 push constant 14
 push constant 5
-call Grid.drawHorizontal 5
+push constant 16
+call Grid.drawHorizontal 6
 pop temp 0
 push constant 0
 return
@@ -66,6 +73,11 @@ pop pointer 0
 push constant 0
 pop local 0
 push local 0
+return
+function Grid.updateSnake 0
+push argument 0
+pop pointer 0
+push constant 0
 return
 function Grid.drawFood 0
 push argument 0
@@ -79,9 +91,9 @@ push constant 16384
 push argument 2
 add
 pop local 0
-push constant 8
+push constant 0
 pop local 1
-push constant 247
+push constant 255
 pop local 2
 push constant 32
 pop local 3
@@ -120,7 +132,7 @@ pop pointer 0
 push argument 2
 pop local 1
 push local 1
-push constant 8
+push argument 5
 add
 pop local 2
 push argument 3
