--- a/projects/09/Snake/Snake.vm
+++ b/projects/09/Snake/Snake.vm
@@ -4,6 +4,27 @@ call Memory.alloc 1
 pop pointer 0
 call Grid.new 0
 pop this 0
+push constant 2
+call Array.new 1
+pop this 1
+push constant 2
+call Array.new 1
+pop this 2
+push pointer 0
+push constant 9
+push constant 7
+call Snake.setHead 3
+pop temp 0
+push pointer 0
+push constant 5
+push constant 7
+call Snake.setTail 3
+pop temp 0
+push constant 2
+call Array.new 1
+pop this 2
+push constant 4
+pop this 3
 push pointer 0
 return
 function Snake.dispose 0
@@ -16,4 +37,206 @@ push pointer 0
 call Memory.deAlloc 1
 pop temp 0
 push constant 0
+return
+function Snake.setHead 0
+push argument 0
+pop pointer 0
+push constant 0
+push this 1
+add
+push argument 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant 1
+push this 1
+add
+push argument 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant 0
+return
+function Snake.setTail 0
+push argument 0
+pop pointer 0
+push constant 0
+push this 2
+add
+push argument 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant 1
+push this 2
+add
+push argument 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant 0
+return
+function Snake.updateDirection 0
+push argument 0
+pop pointer 0
+push this 3
+push argument 1
+eq
+not
+push this 3
+push constant 1
+eq
+push argument 1
+and
+push constant 2
+eq
+not
+push argument 1
+push constant 1
+eq
+push this 3
+and
+push constant 2
+eq
+not
+and
+push this 3
+push constant 3
+eq
+push argument 1
+and
+push constant 4
+eq
+not
+and
+push argument 1
+push constant 4
+eq
+push this 3
+and
+push constant 3
+eq
+not
+and
+and
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push argument 1
+pop this 3
+label IF_FALSE0
+push constant 0
+return
+function Snake.move 1
+push argument 0
+pop pointer 0
+push this 3
+push constant 1
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 0
+push this 1
+add
+push constant 0
+push this 1
+add
+pop pointer 1
+push that 0
+push constant 1
+sub
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_FALSE0
+push this 3
+push constant 2
+eq
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push constant 0
+push this 1
+add
+push constant 0
+push this 1
+add
+pop pointer 1
+push that 0
+push constant 1
+add
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_FALSE1
+push this 3
+push constant 3
+eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push constant 1
+push this 1
+add
+push constant 1
+push this 1
+add
+pop pointer 1
+push that 0
+push constant 1
+sub
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_FALSE2
+push this 3
+push constant 4
+eq
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push constant 1
+push this 1
+add
+push constant 1
+push this 1
+add
+pop pointer 1
+push that 0
+push constant 1
+add
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_FALSE3
+push this 0
+push this 1
+call Grid.detectCollision 2
+pop local 0
+push local 0
+push constant 0
+eq
+push local 0
+or
+push constant 3
+eq
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
+push this 0
+push this 1
+push this 2
+call Grid.updateSnake 3
+pop temp 0
+label IF_FALSE4
+push local 0
 return
