--- a/projects/09/Snake/SnakeGame.vm
+++ b/projects/09/Snake/SnakeGame.vm
@@ -10,18 +10,89 @@ call Scoreboard.new 0
 pop this 1
 push pointer 0
 return
-function SnakeGame.run 1
+function SnakeGame.run 2
 push argument 0
 pop pointer 0
 call Snake.new 0
 pop this 0
 push constant 0
-pop local 0
+pop local 1
 label WHILE_EXP0
-push local 0
+push local 1
 not
 not
 if-goto WHILE_END0
+label WHILE_EXP1
+push local 0
+push constant 0
+eq
+not
+if-goto WHILE_END1
+call Keyboard.keyPressed 0
+pop local 0
+push this 0
+call Snake.move 1
+pop temp 0
+goto WHILE_EXP1
+label WHILE_END1
+push local 0
+push constant 131
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 0
+push constant 1
+call Snake.updateDirection 2
+pop temp 0
+label IF_FALSE0
+push local 0
+push constant 133
+eq
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push this 0
+push constant 2
+call Snake.updateDirection 2
+pop temp 0
+label IF_FALSE1
+push local 0
+push constant 130
+eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push this 0
+push constant 3
+call Snake.updateDirection 2
+pop temp 0
+label IF_FALSE2
+push local 0
+push constant 132
+eq
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push this 0
+push constant 4
+call Snake.updateDirection 2
+pop temp 0
+label IF_FALSE3
+label WHILE_EXP2
+push local 0
+push constant 0
+eq
+not
+not
+if-goto WHILE_END2
+call Keyboard.keyPressed 0
+pop local 0
+push this 0
+call Snake.move 1
+pop temp 0
+goto WHILE_EXP2
+label WHILE_END2
 goto WHILE_EXP0
 label WHILE_END0
 push this 0
