--- a/projects/09/Snake/Scoreboard.vm
+++ b/projects/09/Snake/Scoreboard.vm
@@ -162,3 +162,41 @@ call Output.printInt 1
 pop temp 0
 push constant 0
 return
+function Scoreboard.updateDirection 0
+push argument 0
+pop pointer 0
+push constant 12
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 11
+call String.new 1
+push constant 68
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push argument 1
+call Output.printInt 1
+pop temp 0
+push constant 0
+return
