--- a/projects/09/SnakeQueue/Scoreboard.vm
+++ b/projects/09/SnakeQueue/Scoreboard.vm
@@ -1,9 +1,22 @@
 function Scoreboard.new 0
-push constant 1
+push constant 2
 call Memory.alloc 1
 pop pointer 0
 push constant 0
 pop this 0
+push argument 0
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 1
+pop this 1
+goto IF_END0
+label IF_FALSE0
+push argument 0
+pop this 1
+label IF_END0
 push pointer 0
 call Scoreboard.setHeading 1
 pop temp 0
@@ -133,7 +146,7 @@ call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push pointer 0
-push constant 10
+push this 1
 call Scoreboard.updateSpeed 2
 pop temp 0
 push constant 0
@@ -141,6 +154,8 @@ return
 function Scoreboard.updateSpeed 0
 push argument 0
 pop pointer 0
+push argument 1
+pop this 1
 push constant 7
 push constant 8
 call Output.moveCursor 2
@@ -148,7 +163,18 @@ pop temp 0
 push argument 1
 call Output.printInt 1
 pop temp 0
+push constant 1
+call String.new 1
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
 push constant 0
+return
+function Scoreboard.getSpeed 0
+push argument 0
+pop pointer 0
+push this 1
 return
 function Scoreboard.setState 0
 push argument 0
