--- a/projects/09/SnakeQueue/Grid.vm
+++ b/projects/09/SnakeQueue/Grid.vm
@@ -51,6 +51,16 @@ push constant 22
 push constant 16
 call Grid.drawHorizontal 6
 pop temp 0
+push pointer 0
+push constant 0
+push constant 16
+push constant 9
+push constant 22
+push constant 16
+push constant 14
+call Math.multiply 2
+call Grid.drawHorizontal 6
+pop temp 0
 push constant 0
 return
 function Grid.detectCollision 5
