--- a/projects/09/SnakeQueue/Menu.vm
+++ b/projects/09/SnakeQueue/Menu.vm
@@ -97,7 +97,7 @@ goto WHILE_EXP2
 label WHILE_END2
 goto WHILE_EXP0
 label WHILE_END0
-push constant 0
+push this 1
 return
 function Menu.displayMenu 0
 push argument 0
