--- a/projects/09/SnakeQueue/Scoreboard.vm
+++ b/projects/09/SnakeQueue/Scoreboard.vm
@@ -21,7 +21,8 @@ push pointer 0
 call Scoreboard.setHeading 1
 pop temp 0
 push pointer 0
-call Scoreboard.setScore 1
+push constant 0
+call Scoreboard.setScore 2
 pop temp 0
 push pointer 0
 call Scoreboard.setSpeed 1
@@ -62,6 +63,8 @@ return
 function Scoreboard.setScore 0
 push argument 0
 pop pointer 0
+push argument 1
+pop this 0
 push constant 3
 push constant 1
 call Output.moveCursor 2
@@ -99,7 +102,7 @@ call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push pointer 0
-push constant 0
+push argument 1
 call Scoreboard.updateScore 2
 pop temp 0
 push constant 0
@@ -117,6 +120,20 @@ call Output.moveCursor 2
 pop temp 0
 push this 0
 call Output.printInt 1
+pop temp 0
+push constant 5
+call String.new 1
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
 pop temp 0
 push constant 0
 return
@@ -211,6 +228,61 @@ call Output.printString 1
 pop temp 0
 push argument 1
 call Output.printInt 1
+pop temp 0
+push constant 0
+return
+function Scoreboard.showMessage 0
+push argument 0
+pop pointer 0
+push constant 14
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push argument 1
+call Output.printString 1
+pop temp 0
+push constant 0
+return
+function Scoreboard.clearMessage 0
+push argument 0
+pop pointer 0
+push constant 14
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 15
+call String.new 1
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
 pop temp 0
 push constant 0
 return
