--- a/projects/09/Snake/Main.vm
+++ b/projects/09/Snake/Main.vm
@@ -1,11 +1,50 @@
-function Main.main 1
-call SnakeGame.new 0
+function Main.main 5
+push constant 10
+call LCGRandom.setSeed 1
+pop temp 0
+push constant 1
+call Scoreboard.new 1
+pop local 1
+push local 1
+call Menu.new 1
+pop local 2
+push constant 0
+pop local 4
+label WHILE_EXP0
+push constant 0
+not
+not
+if-goto WHILE_END0
+push local 2
+push local 4
+call Menu.show 2
+pop local 3
+push local 4
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push local 1
+push constant 0
+call Scoreboard.setScore 2
+pop temp 0
+push local 1
+call Scoreboard.clearMessage 1
+pop temp 0
+label IF_FALSE0
+push constant 0
+not
+pop local 4
+push local 3
+push local 1
+call Game.new 2
 pop local 0
 push local 0
-call SnakeGame.run 1
+call Game.run 1
 pop temp 0
 push local 0
-call SnakeGame.dispose 1
+call Game.dispose 1
 pop temp 0
+goto WHILE_EXP0
+label WHILE_END0
 push constant 0
 return
