--- a/projects/09/Snake/Scoreboard.vm
+++ b/projects/09/Snake/Scoreboard.vm
@@ -1,14 +1,28 @@
 function Scoreboard.new 0
-push constant 1
+push constant 2
 call Memory.alloc 1
 pop pointer 0
 push constant 0
 pop this 0
+push argument 0
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 1
+pop this 1
+goto IF_END0
+label IF_FALSE0
+push argument 0
+pop this 1
+label IF_END0
 push pointer 0
 call Scoreboard.setHeading 1
 pop temp 0
 push pointer 0
-call Scoreboard.setScore 1
+push constant 0
+call Scoreboard.setScore 2
 pop temp 0
 push pointer 0
 call Scoreboard.setSpeed 1
@@ -49,6 +63,8 @@ return
 function Scoreboard.setScore 0
 push argument 0
 pop pointer 0
+push argument 1
+pop this 0
 push constant 3
 push constant 1
 call Output.moveCursor 2
@@ -86,7 +102,7 @@ call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push pointer 0
-push constant 0
+push argument 1
 call Scoreboard.updateScore 2
 pop temp 0
 push constant 0
@@ -104,6 +120,20 @@ call Output.moveCursor 2
 pop temp 0
 push this 0
 call Output.printInt 1
+pop temp 0
+push constant 5
+call String.new 1
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
 pop temp 0
 push constant 0
 return
@@ -133,7 +163,7 @@ call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push pointer 0
-push constant 10
+push this 1
 call Scoreboard.updateSpeed 2
 pop temp 0
 push constant 0
@@ -141,6 +171,8 @@ return
 function Scoreboard.updateSpeed 0
 push argument 0
 pop pointer 0
+push argument 1
+pop this 1
 push constant 7
 push constant 8
 call Output.moveCursor 2
@@ -148,19 +180,18 @@ pop temp 0
 push argument 1
 call Output.printInt 1
 pop temp 0
+push constant 1
+call String.new 1
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
 push constant 0
 return
-function Scoreboard.showState 0
+function Scoreboard.getSpeed 0
 push argument 0
 pop pointer 0
-push constant 10
-push constant 1
-call Output.moveCursor 2
-pop temp 0
-push argument 1
-call Output.printInt 1
-pop temp 0
-push constant 0
+push this 1
 return
 function Scoreboard.updateDirection 0
 push argument 0
@@ -197,6 +228,94 @@ call Output.printString 1
 pop temp 0
 push argument 1
 call Output.printInt 1
+pop temp 0
+push constant 0
+return
+function Scoreboard.showMessage 0
+push argument 0
+pop pointer 0
+push constant 14
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push argument 1
+call Output.printString 1
+pop temp 0
+push constant 0
+return
+function Scoreboard.clearMessage 0
+push argument 0
+pop pointer 0
+push constant 14
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 15
+call String.new 1
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push constant 0
+return
+function Scoreboard.gameOver 0
+push argument 0
+pop pointer 0
+push constant 14
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 10
+call String.new 1
+push constant 71
+call String.appendChar 2
+push constant 65
+call String.appendChar 2
+push constant 77
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 79
+call String.appendChar 2
+push constant 86
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 33
+call String.appendChar 2
+call Output.printString 1
 pop temp 0
 push constant 0
 return
