--- a/projects/09/Snake/Snake.vm
+++ b/projects/09/Snake/Snake.vm
@@ -1,41 +1,33 @@
 function Snake.new 0
-push constant 4
+push constant 3
 call Memory.alloc 1
 pop pointer 0
-call Grid.new 0
-pop this 0
-push pointer 0
-call Snake.createSnake 1
-pop temp 0
 push argument 0
-pop this 3
+pop this 2
+push constant 22
+push constant 14
+call Math.multiply 2
+call Queue.new 1
+pop this 1
+push pointer 0
+call Snake.buildSnake 1
+pop temp 0
 push pointer 0
 return
 function Snake.dispose 0
 push argument 0
 pop pointer 0
-push this 0
-call Grid.dispose 1
-pop temp 0
-push this 2
-call Queue.dispose 1
-pop temp 0
 push this 1
-call Array.dispose 1
+call Queue.dispose 1
 pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
 push constant 0
 return
-function Snake.createSnake 3
+function Snake.buildSnake 3
 push argument 0
 pop pointer 0
-push constant 22
-push constant 14
-call Math.multiply 2
-call Queue.new 1
-pop this 2
 push constant 15
 pop local 0
 push constant 19
@@ -81,25 +73,25 @@ return
 function Snake.updateHead 0
 push argument 0
 pop pointer 0
-push this 2
+push this 1
 push argument 1
 call Queue.pushHead 2
 pop temp 0
-push this 0
+push this 2
 push argument 1
 call Grid.updateHead 2
 pop temp 0
 push argument 1
-pop this 1
+pop this 0
 push constant 0
 return
 function Snake.updateTail 1
 push argument 0
 pop pointer 0
-push this 2
+push this 1
 call Queue.takeTail 1
 pop local 0
-push this 0
+push this 2
 push local 0
 call Grid.updateTail 2
 pop temp 0
@@ -108,64 +100,15 @@ call Array.dispose 1
 pop temp 0
 push constant 0
 return
-function Snake.updateDirection 0
-push argument 0
-pop pointer 0
-push this 3
-push argument 1
-eq
-not
-push this 3
-push constant 1
-eq
-push argument 1
-and
-push constant 2
-eq
-not
-push argument 1
-push constant 1
-eq
-push this 3
-and
-push constant 2
-eq
-not
-and
-push this 3
-push constant 3
-eq
-push argument 1
-and
-push constant 4
-eq
-not
-and
-push argument 1
-push constant 4
-eq
-push this 3
-and
-push constant 3
-eq
-not
-and
-and
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push argument 1
-pop this 3
-label IF_FALSE0
-push constant 0
-return
 function Snake.move 2
 push argument 0
 pop pointer 0
+push constant 0
+pop local 0
 push constant 2
 call Array.new 1
 pop local 1
-push this 3
+push argument 1
 push constant 1
 eq
 if-goto IF_TRUE0
@@ -175,7 +118,7 @@ push constant 0
 push local 1
 add
 push constant 0
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -187,7 +130,7 @@ push constant 1
 push local 1
 add
 push constant 1
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -198,7 +141,7 @@ pop pointer 1
 push temp 0
 pop that 0
 label IF_FALSE0
-push this 3
+push argument 1
 push constant 2
 eq
 if-goto IF_TRUE1
@@ -208,7 +151,7 @@ push constant 0
 push local 1
 add
 push constant 0
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -220,7 +163,7 @@ push constant 1
 push local 1
 add
 push constant 1
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -231,7 +174,7 @@ pop pointer 1
 push temp 0
 pop that 0
 label IF_FALSE1
-push this 3
+push argument 1
 push constant 3
 eq
 if-goto IF_TRUE2
@@ -241,7 +184,7 @@ push constant 0
 push local 1
 add
 push constant 0
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -255,7 +198,7 @@ push constant 1
 push local 1
 add
 push constant 1
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -264,7 +207,7 @@ pop pointer 1
 push temp 0
 pop that 0
 label IF_FALSE2
-push this 3
+push argument 1
 push constant 4
 eq
 if-goto IF_TRUE3
@@ -274,7 +217,7 @@ push constant 0
 push local 1
 add
 push constant 0
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -288,7 +231,7 @@ push constant 1
 push local 1
 add
 push constant 1
-push this 1
+push this 0
 add
 pop pointer 1
 push that 0
@@ -297,8 +240,8 @@ pop pointer 1
 push temp 0
 pop that 0
 label IF_FALSE3
-push this 0
-push this 1
+push this 2
+push local 1
 call Grid.detectCollision 2
 pop local 0
 push local 0
@@ -314,7 +257,6 @@ pop temp 0
 push pointer 0
 call Snake.updateTail 1
 pop temp 0
-goto IF_END4
 label IF_FALSE4
 push local 0
 push constant 3
@@ -326,13 +268,9 @@ push pointer 0
 push local 1
 call Snake.updateHead 2
 pop temp 0
-push this 0
+push this 2
 call Grid.setFood 1
 pop temp 0
 label IF_FALSE5
-label IF_END4
-push constant 5000
-call Sys.wait 1
-pop temp 0
 push local 0
 return
