--- a/projects/09/Snake/Game.vm
+++ b/projects/09/Snake/Game.vm
@@ -1,5 +1,5 @@
 function Game.new 0
-push constant 5
+push constant 7
 call Memory.alloc 1
 pop pointer 0
 call Grid.new 0
@@ -32,6 +32,8 @@ push argument 0
 pop pointer 0
 push constant 4
 pop this 3
+push constant 0
+pop this 6
 label WHILE_EXP0
 push local 1
 not
@@ -93,6 +95,20 @@ push constant 4
 call Game.updateDirection 2
 pop temp 0
 label IF_FALSE3
+push this 5
+push this 6
+push constant 10
+gt
+and
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
+push this 1
+call Scoreboard.clearMessage 1
+pop temp 0
+push constant 0
+pop this 5
+label IF_FALSE4
 push local 2
 push local 3
 add
@@ -157,6 +173,10 @@ return
 function Game.move 2
 push argument 0
 pop pointer 0
+push this 6
+push constant 1
+add
+pop this 6
 push this 0
 push this 3
 call Snake.move 2
@@ -212,6 +232,11 @@ push constant 33
 call String.appendChar 2
 call Scoreboard.showMessage 2
 pop temp 0
+push constant 0
+pop this 6
+push constant 0
+not
+pop this 5
 label IF_FALSE1
 push local 0
 return
